bundle_id implementation
